fix(core): fix correctness/thread-safety/security bugs with regression tests
Address review findings across core utilities while preserving backward
compatibility. Behavior- and format-changing items (e.g. cipher default
mode, UUID format, equals/hashCode contracts) are intentionally deferred.

collection:
- ArrayMap.clone() rebuilds buckets instead of truncating the hash table
- LruHashSet/CaseInsensitiveSet implement writeObject/readObject
- CaseInsensitiveMap handles null keys and lowercases with Locale.ROOT

misc/lang:
- DynamicProperties: fix reload throttle, delegate Map default methods,
  create parent directories with mkdirs()
- SystemUtil/LocaleUtil use volatile suppliers; ClassUtil.newInstance uses
  getDeclaredConstructor(); StringUtil.replace guards empty search text

io/nio/net:
- FileUtil.readBytes reads until the buffer is filled or EOF
- ChannelUtil loops transferTo until the whole source is copied
- SerializeUtil default filter enforces depth/refs/bytes/array-length limits
- Preserve a literal '+' when decoding URL/resource/jar/zip paths

crypto/convert/beans/timer/xml/log/security:
- CachedCipher re-initializes pooled ciphers per key; clears pool on config change
- TimestampConversionUtil honors the locale; DecimalFormatSymbolsUtil returns a clone
- BeanDescImpl no longer mutates caller args during method resolution;
  BeanDescFactory deregisters its cache disposable on clear()
- TimeoutManager fixes the thread-clear race; TimeoutTask fields are volatile
- SchemaFactoryUtil enables secure processing; Logger is null-safe

Adds regression tests for the high-severity fixes.